Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/importChecks/ImportIsFullyQualified.out
ImportIsFullyQualified.java:11:1: compiler.err.doesnt.exist: JobAttributes
1 error
